added email functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,10 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.database=training
 spring.data.mongodb.repositories.enabled=true
 server.port:8090
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=projectteam746@gmail.com
+spring.mail.password=hrxyhliwvupgobln
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
